comments vics ready

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -436,16 +436,16 @@
                 <span class="coverage-count">(5/14)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/DrinklyTeamComponent.html">src/app/components/drinkly-team/drinkly-team.component.ts</a>
             </td>
             <td>component</td>
             <td>DrinklyTeamComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="81">
+                <span class="coverage-percent">81 %</span>
+                <span class="coverage-count">(13/16)</span>
             </td>
         </tr>
         <tr class="low">
@@ -604,28 +604,28 @@
                 <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/PostBusinessComponent.html">src/app/components/post-business/post-business.component.ts</a>
             </td>
             <td>component</td>
             <td>PostBusinessComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/13)</span>
+            <td align="right" data-sort="76">
+                <span class="coverage-percent">76 %</span>
+                <span class="coverage-count">(10/13)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/PostDrinkComponent.html">src/app/components/post-drink/post-drink.component.ts</a>
             </td>
             <td>component</td>
             <td>PostDrinkComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="81">
+                <span class="coverage-percent">81 %</span>
+                <span class="coverage-count">(13/16)</span>
             </td>
         </tr>
         <tr class="low">
@@ -707,9 +707,9 @@
             </td>
             <td>component</td>
             <td>UploadingLoaderComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -748,16 +748,16 @@
                 <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./classes/Bar.html">src/app/models/bar.ts</a>
             </td>
             <td>class</td>
             <td>Bar</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/20)</span>
+            <td align="right" data-sort="94">
+                <span class="coverage-percent">94 %</span>
+                <span class="coverage-count">(18/19)</span>
             </td>
         </tr>
         <tr class="low">
@@ -784,52 +784,40 @@
                 <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./classes/game.html">src/app/models/game.ts</a>
             </td>
             <td>class</td>
             <td>game</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
+            <td align="right" data-sort="85">
+                <span class="coverage-percent">85 %</span>
+                <span class="coverage-count">(6/7)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./classes/ingredient.html">src/app/models/ingredient.ts</a>
             </td>
             <td>class</td>
             <td>ingredient</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+            <td align="right" data-sort="83">
+                <span class="coverage-percent">83 %</span>
+                <span class="coverage-count">(5/6)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./classes/item.html">src/app/models/itemMenu.ts</a>
             </td>
             <td>class</td>
             <td>item</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./classes/userP.html">src/app/models/user-p.ts</a>
-            </td>
-            <td>class</td>
-            <td>userP</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(3/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -844,16 +832,16 @@
                 <span class="coverage-count">(0/11)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./classes/zone.html">src/app/models/zone.ts</a>
             </td>
             <td>class</td>
             <td>zone</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(3/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -892,28 +880,28 @@
                 <span class="coverage-count">(0/17)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/BarService.html">src/app/services/bar.service.ts</a>
             </td>
             <td>injectable</td>
             <td>BarService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(6/8)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/CategoriesService.html">src/app/services/categories.service.ts</a>
             </td>
             <td>injectable</td>
             <td>CategoriesService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(2/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -928,40 +916,40 @@
                 <span class="coverage-count">(0/10)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/GameService.html">src/app/services/game.service.ts</a>
             </td>
             <td>injectable</td>
             <td>GameService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+            <td align="right" data-sort="71">
+                <span class="coverage-percent">71 %</span>
+                <span class="coverage-count">(5/7)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/IngredientService.html">src/app/services/ingredient.service.ts</a>
             </td>
             <td>injectable</td>
             <td>IngredientService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/9)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(6/8)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/SendMailService.html">src/app/services/send-mail.service.ts</a>
             </td>
             <td>injectable</td>
             <td>SendMailService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
+            <td align="right" data-sort="71">
+                <span class="coverage-percent">71 %</span>
+                <span class="coverage-count">(5/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -988,16 +976,16 @@
                 <span class="coverage-count">(0/8)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/ZoneService.html">src/app/services/zone.service.ts</a>
             </td>
             <td>injectable</td>
             <td>ZoneService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(6/8)</span>
             </td>
         </tr>
         <tr class="low">
