--- a/documentation/injectables/BarService.html
+++ b/documentation/injectables/BarService.html
@@ -127,7 +127,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/services/bar.service.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/services/bar.service.ts:14</a></div>
                             </td>
                         </tr>
 
@@ -185,21 +185,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>createBar(bar)</code>
+<code>createBar(bar: <a href="../classes/Bar.html">Bar</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="26"
-                            class="link-to-prism">src/app/services/bar.service.ts:26</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="48"
+                            class="link-to-prism">src/app/services/bar.service.ts:48</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para crear el bar.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -207,18 +209,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>bar</td>
+                                    <td>
+                                                <code><a href="../classes/Bar.html" target="_self" >Bar</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>Bar que se va a crear.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -251,21 +264,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>deleteBar(id)</code>
+<code>deleteBar(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="14"
-                            class="link-to-prism">src/app/services/bar.service.ts:14</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="22"
+                            class="link-to-prism">src/app/services/bar.service.ts:22</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para eliminar el bar.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -273,18 +288,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id del bar.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -317,21 +343,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getBar(id)</code>
+<code>getBar(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="22"
-                            class="link-to-prism">src/app/services/bar.service.ts:22</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="39"
+                            class="link-to-prism">src/app/services/bar.service.ts:39</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener los datos de un bar.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -339,18 +367,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id del bar.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -390,18 +429,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="18"
-                            class="link-to-prism">src/app/services/bar.service.ts:18</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="30"
+                            class="link-to-prism">src/app/services/bar.service.ts:30</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener los bares de la DB.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -422,21 +468,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>updateBar(bar)</code>
+<code>updateBar(bar: <a href="../classes/Bar.html">Bar</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="30"
-                            class="link-to-prism">src/app/services/bar.service.ts:30</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="57"
+                            class="link-to-prism">src/app/services/bar.service.ts:57</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para actualizar el bar.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -444,18 +492,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>bar</td>
+                                    <td>
+                                                <code><a href="../classes/Bar.html" target="_self" >Bar</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>bar con los datos actualizados.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -504,10 +563,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/services/bar.service.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/services/bar.service.ts:14</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda el url de la api donde sacará la información.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -527,26 +592,53 @@ import { Bar } from &#x27;../models/bar&#x27;;
 export class BarService {
 
   // _url &#x3D; &quot;http://localhost:5000/api/bar/&quot;;
+  /**
+   * Guarda el url de la api donde sacará la información.
+   */
   _url &#x3D; &#x27;https://drinklyapi.herokuapp.com/api/bar/&#x27;
   constructor(private _http: HttpClient) { }
 
-  deleteBar(id) {
+  /**
+   * Hace el request a la api para eliminar el bar.
+   * @param {String} id - id del bar.
+   * @returns {any}
+   */
+  deleteBar(id:String):any {
     return this._http.delete(this._url + &quot;delete/&quot; + id);
   }
 
-  getBars() {
+  /**
+   * Hace el request a la api para obtener los bares de la DB.
+   * @returns {any}
+   */
+  getBars():any {
     return this._http.get(this._url);
   }
 
-  getBar(id) {
+  /**
+   * Hace el request a la api para obtener los datos de un bar.
+   * @param {String} id - id del bar.
+   * @returns {any}
+   */
+  getBar(id:String):any {
     return this._http.get(this._url + id);
   }
 
-  createBar(bar) {
+  /**
+   * Hace el request a la api para crear el bar.
+   * @param {Bar} bar - Bar que se va a crear.
+   * @returns {any}
+   */
+  createBar(bar:Bar):any {
     return this._http.post(this._url+&quot;add&quot;, bar);
   }
 
-  updateBar(bar){
+  /**
+   * Hace el request a la api para actualizar el bar.
+   * @param {Bar} bar - bar con los datos actualizados.
+   * @returns {any}
+   */
+  updateBar(bar:Bar):any{
     console.log(bar);
     return this._http.put(this._url+&#x27;update/&#x27;+bar._id, bar);
   }
