--- a/documentation/injectables/SendMailService.html
+++ b/documentation/injectables/SendMailService.html
@@ -124,7 +124,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/services/send-mail.service.ts:9</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/services/send-mail.service.ts:12</a></div>
                             </td>
                         </tr>
 
@@ -189,14 +189,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="26"
-                            class="link-to-prism">src/app/services/send-mail.service.ts:26</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="44"
+                            class="link-to-prism">src/app/services/send-mail.service.ts:44</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la API para enviar el email al administrador cuando se postea un negocio/promoción.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -206,6 +208,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -220,6 +223,12 @@
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>data del email que se le va a enviar al administrador.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -259,14 +268,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="22"
-                            class="link-to-prism">src/app/services/send-mail.service.ts:22</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="35"
+                            class="link-to-prism">src/app/services/send-mail.service.ts:35</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la API para enviar el email al administrador cuando se postea una receta.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -276,6 +287,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -290,6 +302,12 @@
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>data del email que se le va a enviar al administrador.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -329,14 +347,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="18"
-                            class="link-to-prism">src/app/services/send-mail.service.ts:18</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="26"
+                            class="link-to-prism">src/app/services/send-mail.service.ts:26</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la API para enviar el email al usuario cuando postea una receta.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -346,6 +366,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -360,6 +381,12 @@
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>data del email que se le va a enviar al usuario.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -399,14 +426,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="30"
-                            class="link-to-prism">src/app/services/send-mail.service.ts:30</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="53"
+                            class="link-to-prism">src/app/services/send-mail.service.ts:53</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la API para enviar el email al usuario cuando postea su negocio/promoción.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -416,6 +445,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -430,6 +460,12 @@
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>data del email que se le va a enviar al usuario.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -478,10 +514,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/services/send-mail.service.ts:9</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/services/send-mail.service.ts:12</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda el url de la api donde sacará la información.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -499,6 +541,9 @@ import { HttpClient } from &#x27;@angular/common/http&#x27;;
 })
 export class SendMailService {
 
+  /**
+   * Guarda el url de la api donde sacará la información.
+   */
   _url &#x3D; &#x27;https://drinklyapi.herokuapp.com/api/sendmail/&#x27;;
   // _url &#x3D; &#x27;http://localhost:5000/api/sendmail/&#x27;;
 
@@ -508,19 +553,39 @@ export class SendMailService {
 
     }
 
-    sendEmailUser(data: any){
+    /**
+     * Hace el request a la API para enviar el email al usuario cuando postea una receta.
+     * @param data - data del email que se le va a enviar al usuario.
+     * @returns {any}
+     */
+    sendEmailUser(data: any):any{
       return this._http.post(this._url+&#x27;user&#x27;, data);
     }
 
-    postRecipe(data:any){
+    /**
+     * Hace el request a la API para enviar el email al administrador cuando se postea una receta.
+     * @param data - data del email que se le va a enviar al administrador.
+     * @returns {any}
+     */
+    postRecipe(data:any):any{
       return this._http.post(this._url+&#x27;recipe&#x27;, data);
     }
 
-    postBusiness(data:any){
+    /**
+     * Hace el request a la API para enviar el email al administrador cuando se postea un negocio/promoción.
+     * @param data - data del email que se le va a enviar al administrador.
+     * @returns {any}
+     */
+    postBusiness(data:any):any{
       return this._http.post(this._url + &#x27;business&#x27;, data);
     }
 
-    sendEmailUserBusiness(data: any){
+    /**
+     * Hace el request a la API para enviar el email al usuario cuando postea su negocio/promoción.
+     * @param data - data del email que se le va a enviar al usuario.
+     * @returns {any}
+     */
+    sendEmailUserBusiness(data: any):any{
       return this._http.post(this._url + &#x27;user/business&#x27;, data);
     }
 }
