--- a/documentation/injectables/ZoneService.html
+++ b/documentation/injectables/ZoneService.html
@@ -127,7 +127,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/services/zone.service.ts:10</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/services/zone.service.ts:13</a></div>
                             </td>
                         </tr>
 
@@ -185,21 +185,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>deleteZone(id)</code>
+<code>deleteZone(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="23"
-                            class="link-to-prism">src/app/services/zone.service.ts:23</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="40"
+                            class="link-to-prism">src/app/services/zone.service.ts:40</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para eliminar la zona.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -207,18 +209,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id de la zona.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -251,21 +264,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getZone(id)</code>
+<code>getZone(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="28"
-                            class="link-to-prism">src/app/services/zone.service.ts:28</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="50"
+                            class="link-to-prism">src/app/services/zone.service.ts:50</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener los datos de la zona.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -273,18 +288,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id de la zona.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -324,18 +350,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="14"
-                            class="link-to-prism">src/app/services/zone.service.ts:14</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="21"
+                            class="link-to-prism">src/app/services/zone.service.ts:21</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener las zonas de la DB.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -363,14 +396,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="18"
-                            class="link-to-prism">src/app/services/zone.service.ts:18</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="30"
+                            class="link-to-prism">src/app/services/zone.service.ts:30</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para crear la zona.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -380,6 +415,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -394,6 +430,12 @@
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>Zona que se va a crear.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -433,14 +475,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="34"
-                            class="link-to-prism">src/app/services/zone.service.ts:34</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="60"
+                            class="link-to-prism">src/app/services/zone.service.ts:60</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para actualizar la zona.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -450,6 +494,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -464,6 +509,12 @@
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>Zona que se va a actualizar.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -512,10 +563,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/services/zone.service.ts:10</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/services/zone.service.ts:13</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda el url de la api donde sacará la información.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -534,31 +591,57 @@ import { zone } from &#x27;../models/zone&#x27;;
 })
 export class ZoneService {
 
+  /**
+   * Guarda el url de la api donde sacará la información.
+   */
   _url &#x3D; &#x27;https://drinklyapi.herokuapp.com/api/zone/&#x27;;
   // _url &#x3D; &#x27;http://localhost:5000/api/zone/&#x27;;
   constructor(private _http: HttpClient) { }
 
-  getZones() {
+  /**
+   * Hace el request a la api para obtener las zonas de la DB.
+   * @returns {any}
+   */
+  getZones():any {
     return this._http.get(this._url);
   }
 
-  postZone(zone: zone){
+  /**
+   * Hace el request a la api para crear la zona.
+   * @param {zone} zone - Zona que se va a crear.
+   * @returns {any}
+   */
+  postZone(zone: zone):any{
     console.log(zone);
     return this._http.post(this._url+&#x27;add&#x27;, zone);
   }
 
-  deleteZone(id){
+  /**
+   * Hace el request a la api para eliminar la zona.
+   * @param {String} id - id de la zona.
+   * @returns {any}
+   */
+  deleteZone(id:String):any{
     console.log(id);
     return this._http.delete(this._url+&#x27;delete/&#x27;+id);
   }
 
-  getZone(id){
-    // console.log(id);
+  /**
+   * Hace el request a la api para obtener los datos de la zona.
+   * @param {String} id - id de la zona.
+   * @returns {any}
+   */
+  getZone(id:String):any{
     console.log(this._url)
     return this._http.get(this._url+id);
   }
 
-  updateZone(zone : zone){
+  /**
+   * Hace el request a la api para actualizar la zona.
+   * @param {zone} zone - Zona que se va a actualizar.
+   * @returns {any}
+   */
+  updateZone(zone : zone):any{
     return this._http.put(this._url+&#x27;update/&#x27;+zone._id, zone);
   }
 
