--- a/documentation/classes/Bar.html
+++ b/documentation/classes/Bar.html
@@ -128,9 +128,6 @@
                                 <a href="#twitter">twitter</a>
                             </li>
                             <li>
-                                <a href="#views">views</a>
-                            </li>
-                            <li>
                                 <a href="#working_hours">working_hours</a>
                             </li>
                             <li>
@@ -175,10 +172,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/models/bar.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="79" class="link-to-prism">src/app/models/bar.ts:79</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>id del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -202,10 +205,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="6" class="link-to-prism">src/app/models/bar.ts:6</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/models/bar.ts:15</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Dirección del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -229,10 +238,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/models/bar.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">src/app/models/bar.ts:63</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Es o no socio (paga por estar en un buen lugar en la página).</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -256,10 +271,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/models/bar.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">src/app/models/bar.ts:67</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Habilitado(True)/Deshabilitado(False)</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -283,10 +304,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/models/bar.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">src/app/models/bar.ts:71</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Costo promedio de lo que una persona gasta al ir al bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -310,10 +337,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/models/bar.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/models/bar.ts:39</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Descripción del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -337,10 +370,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/models/bar.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">src/app/models/bar.ts:55</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Correo electrónico.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -364,10 +403,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/models/bar.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/models/bar.ts:47</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Link del facebook (opcional)</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -391,10 +436,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/models/bar.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/models/bar.ts:43</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Link del instagram (opcional)</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -418,10 +469,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="5" class="link-to-prism">src/app/models/bar.ts:5</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/models/bar.ts:11</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Imagen principal del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -445,10 +502,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/models/bar.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">src/app/models/bar.ts:75</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Tragos más relevantes del menú del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -472,10 +535,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="4" class="link-to-prism">src/app/models/bar.ts:4</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="7" class="link-to-prism">src/app/models/bar.ts:7</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Nombre del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -499,10 +568,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/models/bar.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/app/models/bar.ts:35</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Teléfonos del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -526,10 +601,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/models/bar.ts:9</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/models/bar.ts:27</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Fotos del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -553,10 +634,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/models/bar.ts:10</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/models/bar.ts:31</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Puntaje del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -580,37 +667,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/models/bar.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">src/app/models/bar.ts:51</a></div>
                             </td>
                         </tr>
 
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
                 <tr>
                     <td class="col-md-4">
-                        <a name="views"></a>
-                        <span class="name">
-                            <b>
-                            views</b>
-                            <a href="#views"><span class="icon ion-ios-link"></span></a>
-                        </span>
+                        <div class="io-description"><p>Link del twitter (opcional)</p>
+</div>
                     </td>
                 </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
-
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/models/bar.ts:17</a></div>
-                            </td>
-                        </tr>
-
 
             </tbody>
         </table>
@@ -634,10 +700,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/app/models/bar.ts:8</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/models/bar.ts:23</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Horario de trabajo.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -661,10 +733,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="7" class="link-to-prism">src/app/models/bar.ts:7</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/models/bar.ts:19</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Zona donde se encuentra el bar (Foreign key).</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -683,24 +761,81 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { item } from &#x27;./itemMenu&#x27;;
 
 export class Bar {
+  /**
+   * Nombre del bar.
+   */
   name: string;
+  /**
+   * Imagen principal del bar.
+   */
   main_image: String;
+  /**
+   * Dirección del bar.
+   */
   address: string;
+  /**
+   * Zona donde se encuentra el bar (Foreign key).
+   */
   zone: string;
+  /**
+   * Horario de trabajo.
+   */
   working_hours: string;
+  /**
+   * Fotos del bar.
+   */
   pictures: String[];
+  /**
+   * Puntaje del bar.
+   */
   rating: number;
+  /**
+   * Teléfonos del bar.
+   */
   phone: String[];
+  /**
+   * Descripción del bar.
+   */
   description: string;
+  /**
+   * Link del instagram (opcional)
+   */
   instagram: String;
+  /**
+   * Link del facebook (opcional)
+   */
   facebook: String;
+  /**
+   * Link del twitter (opcional)
+   */
   twitter: String;
+  /**
+   * Correo electrónico.
+   */
   email: String;
+  /**
+   * @ignore
+   */
   views: number;
+  /**
+   * Es o no socio (paga por estar en un buen lugar en la página).
+   */
   associate: boolean;
+  /**
+   * Habilitado(True)/Deshabilitado(False)
+   */
   available: boolean;
+  /**
+   * Costo promedio de lo que una persona gasta al ir al bar.
+   */
   cost: number;
+  /**
+   * Tragos más relevantes del menú del bar.
+   */
   menu: item[];
+  /**
+   * id del bar.
+   */
   _id: String;
 }</code></pre>
     </div>
