--- a/documentation/classes/game.html
+++ b/documentation/classes/game.html
@@ -136,10 +136,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="2" class="link-to-prism">src/app/models/game.ts:2</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="5" class="link-to-prism">src/app/models/game.ts:5</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>id del juego.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -163,10 +169,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="3" class="link-to-prism">src/app/models/game.ts:3</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/models/game.ts:9</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Habilitado(True)/Deshabilitado(False)</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -190,10 +202,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="5" class="link-to-prism">src/app/models/game.ts:5</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/models/game.ts:17</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Descripción del bar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -217,10 +235,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="4" class="link-to-prism">src/app/models/game.ts:4</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/models/game.ts:13</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Nombre del juego</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -244,10 +268,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="7" class="link-to-prism">src/app/models/game.ts:7</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/models/game.ts:25</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Foto del juego (No se está usando)</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -271,10 +301,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="6" class="link-to-prism">src/app/models/game.ts:6</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/models/game.ts:21</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Reglas del juego.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -291,11 +327,29 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export class game {
+  /**
+   * id del juego.
+   */
     _id: String;
+  /**
+   * Habilitado(True)/Deshabilitado(False)
+   */
     available: boolean;
+  /**
+   * Nombre del juego
+   */
     name: String;
+  /**
+   * Descripción del bar.
+   */
     description: String;
+    /**
+     * Reglas del juego.
+     */
     rules: String[];
+    /**
+     * Foto del juego (No se está usando)
+     */
     photo: String;
   }</code></pre>
     </div>
