--- a/documentation/classes/ingredient.html
+++ b/documentation/classes/ingredient.html
@@ -133,10 +133,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="2" class="link-to-prism">src/app/models/ingredient.ts:2</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="5" class="link-to-prism">src/app/models/ingredient.ts:5</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>id del ingrediente</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -160,10 +166,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="3" class="link-to-prism">src/app/models/ingredient.ts:3</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/models/ingredient.ts:9</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Habilitado/Deshabilitado.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -187,10 +199,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="5" class="link-to-prism">src/app/models/ingredient.ts:5</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/models/ingredient.ts:17</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Categoría del ingrediente.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -214,10 +232,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="4" class="link-to-prism">src/app/models/ingredient.ts:4</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/models/ingredient.ts:13</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Nombre del ingrediente.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -241,10 +265,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="6" class="link-to-prism">src/app/models/ingredient.ts:6</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/models/ingredient.ts:21</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Foto del ingrediente.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -261,10 +291,25 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export class ingredient {
+    /**
+     * id del ingrediente
+     */
     _id: String;
+    /**
+     * Habilitado/Deshabilitado.
+     */
     available: boolean;
+    /** 
+     * Nombre del ingrediente.
+     */
     name : String;
+    /**
+     * Categoría del ingrediente.
+     */
     category : String;
+    /**
+     * Foto del ingrediente.
+     */
     photo: String;
 }</code></pre>
     </div>
