--- a/documentation/classes/item.html
+++ b/documentation/classes/item.html
@@ -127,10 +127,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="4" class="link-to-prism">src/app/models/itemMenu.ts:4</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/models/itemMenu.ts:13</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Descripción del trago.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -154,10 +160,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="2" class="link-to-prism">src/app/models/itemMenu.ts:2</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="5" class="link-to-prism">src/app/models/itemMenu.ts:5</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Nombre del trago.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -181,10 +193,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="3" class="link-to-prism">src/app/models/itemMenu.ts:3</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/models/itemMenu.ts:9</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Precio del trago.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -201,8 +219,17 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export class item {
+    /**
+     * Nombre del trago.
+     */
     name: String;
+    /**
+     * Precio del trago.
+     */
     price: number;
+    /**
+     * Descripción del trago.
+     */
     description: String;
 }</code></pre>
     </div>
