--- a/documentation/classes/zone.html
+++ b/documentation/classes/zone.html
@@ -127,10 +127,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="2" class="link-to-prism">src/app/models/zone.ts:2</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="5" class="link-to-prism">src/app/models/zone.ts:5</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>id de la zona.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -154,10 +160,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="4" class="link-to-prism">src/app/models/zone.ts:4</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/models/zone.ts:13</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Habilitada/Deshabilitada</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -181,10 +193,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="3" class="link-to-prism">src/app/models/zone.ts:3</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/models/zone.ts:9</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Nombre de la zona</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -201,8 +219,17 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export class zone {
+    /**
+     * id de la zona.
+     */
     _id: String;
+    /**
+     * Nombre de la zona
+     */
     name: String;
+    /**
+     * Habilitada/Deshabilitada
+     */
     available: boolean;
 }</code></pre>
     </div>
