--- a/documentation/injectables/GameService.html
+++ b/documentation/injectables/GameService.html
@@ -99,9 +99,6 @@
                                 <a href="#getGames">getGames</a>
                             </li>
                             <li>
-                                <a href="#postGame">postGame</a>
-                            </li>
-                            <li>
                                 <a href="#updateGame">updateGame</a>
                             </li>
                         </ul>
@@ -127,7 +124,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/services/game.service.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/services/game.service.ts:14</a></div>
                             </td>
                         </tr>
 
@@ -185,21 +182,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>deleteGame(id)</code>
+<code>deleteGame(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="25"
-                            class="link-to-prism">src/app/services/game.service.ts:25</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="41"
+                            class="link-to-prism">src/app/services/game.service.ts:41</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para eliminar el juego.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -207,18 +206,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id del juego.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -251,21 +261,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getGame(id)</code>
+<code>getGame(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="30"
-                            class="link-to-prism">src/app/services/game.service.ts:30</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="51"
+                            class="link-to-prism">src/app/services/game.service.ts:51</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener los datos de un juego.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -273,18 +285,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id del juego.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -324,80 +347,17 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="17"
-                            class="link-to-prism">src/app/services/game.service.ts:17</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="24"
+                            class="link-to-prism">src/app/services/game.service.ts:24</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener los juegos de la DB.</p>
+</div>
 
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="postGame"></a>
-                    <span class="name">
-                        <b>
-                            postGame
-                        </b>
-                        <a href="#postGame"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>postGame(item: <a href="../classes/game.html">game</a>)</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/app/services/game.service.ts:21</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Parameters :</b>
-                        <table class="params">
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Type</td>
-                                    <td>Optional</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>item</td>
-                                    <td>
-                                                <code><a href="../classes/game.html" target="_self" >game</a></code>
-                                    </td>
-
-                                    <td>
-                                        No
-                                    </td>
-
-
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
                     <div>
                     </div>
                     <div class="io-description">
@@ -433,14 +393,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="34"
-                            class="link-to-prism">src/app/services/game.service.ts:34</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="60"
+                            class="link-to-prism">src/app/services/game.service.ts:60</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para actualizar el juego.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -512,10 +474,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/services/game.service.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/services/game.service.ts:14</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda el url de la api donde sacará la información.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -535,30 +503,56 @@ import { game } from &#x27;../models/game&#x27;;
 export class GameService {
 
   // _url&#x3D;&#x27;http://localhost:5000/api/game/&#x27;;
+  /**
+   * Guarda el url de la api donde sacará la información.
+   */
   _url &#x3D; &#x27;https://drinklyapi.herokuapp.com/api/game/&#x27;;
 
   constructor(
     private _http: HttpClient
   ) { }
 
-  getGames() {
+  /**
+   * Hace el request a la api para obtener los juegos de la DB.
+   * @returns {any}
+   */
+  getGames():any {
     return this._http.get(this._url);
   }
 
-  postGame(item: game){
+  /**
+   * 
+   * @ignore
+   */
+  postGame(item: game):any{
     return this._http.post(this._url+&#x27;add&#x27;, item);
   }
 
-  deleteGame(id){
+  /**
+   * Hace el request a la api para eliminar el juego.
+   * @param {String} id - id del juego.
+   * @returns {any}
+   */
+  deleteGame(id:String):any{
     console.log(id);
     return this._http.delete(this._url+&#x27;delete/&#x27;+id);
   }
 
-  getGame(id){
+  /**
+   * Hace el request a la api para obtener los datos de un juego.
+   * @param {String} id - id del juego.
+   * @returns {any}
+   */
+  getGame(id:String):any{
     return this._http.get(this._url+id);
   }
 
-  updateGame(item : game){
+  /**
+   * Hace el request a la api para actualizar el juego.
+   * @param {game} game - jueho con los datos actualizados.
+   * @returns {any}
+   */
+  updateGame(item : game):any{
     return this._http.put(this._url+&#x27;update/&#x27;+item._id, item);
   }
 }
