--- a/documentation/injectables/IngredientService.html
+++ b/documentation/injectables/IngredientService.html
@@ -104,9 +104,6 @@
                             <li>
                                 <a href="#updateIngredient">updateIngredient</a>
                             </li>
-                            <li>
-                                <a href="#updateIngredientPhoto">updateIngredientPhoto</a>
-                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -130,7 +127,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/services/ingredient.service.ts:9</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/services/ingredient.service.ts:12</a></div>
                             </td>
                         </tr>
 
@@ -188,21 +185,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>createIngredient(item)</code>
+<code>createIngredient(item: <a href="../classes/ingredient.html">ingredient</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="13"
-                            class="link-to-prism">src/app/services/ingredient.service.ts:13</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="22"
+                            class="link-to-prism">src/app/services/ingredient.service.ts:22</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para crear el ingrediente.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -210,12 +209,16 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>item</td>
+                                    <td>
+                                                <code><a href="../classes/ingredient.html" target="_self" >ingredient</a></code>
+                                    </td>
 
                                     <td>
                                         No
@@ -254,21 +257,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>deleteIngredient(id)</code>
+<code>deleteIngredient(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="29"
-                            class="link-to-prism">src/app/services/ingredient.service.ts:29</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="55"
+                            class="link-to-prism">src/app/services/ingredient.service.ts:55</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para eliminar el ingrediente.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -276,18 +281,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id del ingrediente.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -320,21 +336,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getIngredient(id)</code>
+<code>getIngredient(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="25"
-                            class="link-to-prism">src/app/services/ingredient.service.ts:25</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="46"
+                            class="link-to-prism">src/app/services/ingredient.service.ts:46</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener los datos de un ingrediente.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -342,18 +360,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>id del ingrediente.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -393,18 +422,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/app/services/ingredient.service.ts:21</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="37"
+                            class="link-to-prism">src/app/services/ingredient.service.ts:37</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para obtener los ingredientes de la DB.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -432,14 +468,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="33"
-                            class="link-to-prism">src/app/services/ingredient.service.ts:33</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="64"
+                            class="link-to-prism">src/app/services/ingredient.service.ts:64</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Hace el request a la api para actualizar el ingredient.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -449,6 +487,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -463,81 +502,12 @@
                                     </td>
 
 
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div>
-                    </div>
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
-
-                    </div>
-                    <div class="io-description">
-                        
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="updateIngredientPhoto"></a>
-                    <span class="name">
-                        <b>
-                            updateIngredientPhoto
-                        </b>
-                        <a href="#updateIngredientPhoto"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>updateIngredientPhoto(file, id)</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="17"
-                            class="link-to-prism">src/app/services/ingredient.service.ts:17</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Parameters :</b>
-                        <table class="params">
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Optional</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>file</td>
-
                                     <td>
-                                        No
+                                        <ul>
+<li>ingrediente con los datos actualizados.</li>
+</ul>
+
                                     </td>
-
-
-                                </tr>
-                                <tr>
-                                    <td>id</td>
-
-                                    <td>
-                                        No
-                                    </td>
-
-
                                 </tr>
                             </tbody>
                         </table>
@@ -586,10 +556,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/services/ingredient.service.ts:9</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/services/ingredient.service.ts:12</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda el url de la api donde sacará la información.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -607,31 +583,62 @@ import { ingredient } from &quot;../models/ingredient&quot;;
   providedIn: &quot;root&quot;,
 })
 export class IngredientService {
+  /**
+   * Guarda el url de la api donde sacará la información.
+   */
   _url &#x3D; &quot;https://drinklyapi.herokuapp.com/api/ingredient/&quot;
   // _url &#x3D; &quot;http://localhost:5000/api/ingredient/&quot;;
+  
   constructor(private _http: HttpClient) {}
 
-  createIngredient(item) {
+  /**
+   * Hace el request a la api para crear el ingrediente.
+   * @param {ingredient} ingredient - ingrediente que se va a crear.
+   * @returns {any}
+   */
+  createIngredient(item:ingredient):any {
     return this._http.post(this._url + &quot;add/&quot;, item);
   }
 
+  /**
+   * @ignore
+   */
   updateIngredientPhoto(file, id) {
     return this._http.put(this._url + &quot;update/photo/&quot; + id, file);
   }
 
-  getIngredients() {
+  /**
+   * Hace el request a la api para obtener los ingredientes de la DB.
+   * @returns {any}
+   */ 
+  getIngredients():any {
     return this._http.get(this._url);
   }
 
-  getIngredient(id) {
+  /**
+   * Hace el request a la api para obtener los datos de un ingrediente.
+   * @param {String} id - id del ingrediente.
+   * @returns {any}
+   */
+  getIngredient(id:String):any {
     return this._http.get(this._url + id);
   }
 
-  deleteIngredient(id) {
+  /**
+   * Hace el request a la api para eliminar el ingrediente.
+   * @param {String} id - id del ingrediente.
+   * @returns {any}
+   */
+  deleteIngredient(id:String):any {
     return this._http.delete(this._url + &quot;delete/&quot; + id);
   }
 
-  updateIngredient(ingredient: ingredient) {
+  /**
+   * Hace el request a la api para actualizar el ingredient.
+   * @param {ingredient} ingredient - ingrediente con los datos actualizados.
+   * @returns {any}
+   */
+  updateIngredient(ingredient: ingredient):any {
     return this._http.put(this._url + &quot;update/&quot; + ingredient._id, ingredient);
   }
 }
